prototype react error, update swagger & others
